// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should setup correctly 1`] = `
Runtime {
  "results": Object {
    "0": Object {
      "expression": "first",
      "line": 0,
      "snapshot": "string",
    },
    "3": Object {
      "expression": "second",
      "line": 3,
      "snapshot": "Expected 0 arguments, but got 1.",
    },
  },
}
`;

exports[`should setup correctly with specified tsconfig 1`] = `
Runtime {
  "results": Object {
    "0": Object {
      "expression": "first",
      "line": 0,
      "snapshot": "string | undefined",
    },
    "3": Object {
      "expression": "second",
      "line": 3,
      "snapshot": "Expected 0 arguments, but got 1.",
    },
  },
}
`;
